--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestor de Grafos</title>
-    <link rel="stylesheet" href="static/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="static/grafo.png">
 </head>
 <body>
@@ -43,6 +43,6 @@
         <p>No se proporcionó un archivo válido o hubo un error al procesar los datos.</p>
     </div>
 
-    <script src="static/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
