--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestor de Grafos</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="static/grafo.png">
+    <link rel="icon" type="image/png" href="grafo.png">
 </head>
 <body>
     <h1>Gestor de Grafos con Algoritmo de Kruskal</h1>
