--- a/index.html
+++ b/index.html
@@ -1,60 +1,86 @@
-<!DOCTYPE html>
-<html lang="es">
+<!DOCTYPE HTML>
+<html lang="SP">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestor de Grafos</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="grafo.png">
+    <link rel="icon" href="grafo.png" type="image/x-icon">
 </head>
 <body>
     <h1>Gestor de Grafos con Algoritmo de Kruskal</h1>
 
     <div id="drag-drop-area">
-        <p>Arrastra un archivo aquí o <span id="file-input-trigger">haz clic para seleccionarlo</span>.</p>
-        <input type="file" id="file-input" accept=".csv, .xlsx" hidden>
+        <p>Arrastra un archivo aquí o <span id="file-input-trigger" class="clickable">haz clic para seleccionarlo</span>.</p>
+        <input type="file" id="file-input" accept=".csv" hidden>
     </div>
 
     <form id="upload-form">
         <button type="button" id="upload-button">Subir Archivo</button>
     </form>
 
-    <div id="results" style="display:none;">
-        <h2>Resultados</h2>
-        <p id="peso_total"></p>
-        <div class="graficos-container">
-            <div class="grafico-box">
-                <h3>Grafo Completo</h3>
-                <div class="image-container">
-                    <img id="grafo_completo" src="#" alt="Grafo Completo">
-                    <button class="zoom-button" data-zoom="in">Zoom +</button>
-                    <button class="zoom-button" data-zoom="out">Zoom -</button>
-                </div>
-            </div>
-            <div class="grafico-box">
-                <h3>Árbol MST</h3>
-                <div class="image-container">
-                    <img id="mst" src="#" alt="Árbol MST">
-                    <button class="zoom-button" data-zoom="in">Zoom +</button>
-                    <button class="zoom-button" data-zoom="out">Zoom -</button>
-                </div>
-            </div>
-        </div>
-        <a href="/">Volver</a>
-    </div>
-
     <div id="error-message" style="display:none;">
-        <p>Ocurrió un error al procesar el archivo.</p>
+        Por favor selecciona un archivo válido antes de subirlo.
     </div>
 
     <script>
-        document.querySelectorAll('.zoom-button').forEach(button => {
-            button.addEventListener('click', event => {
-                const img = button.parentElement.querySelector('img');
-                const zoom = button.getAttribute('data-zoom');
-                const currentScale = parseFloat(img.style.transform.replace('scale(', '').replace(')', '') || 1);
-                img.style.transform = `scale(${zoom === 'in' ? currentScale + 0.1 : currentScale - 0.1})`;
-            });
+        const dragDropArea = document.getElementById('drag-drop-area');
+        const fileInput = document.getElementById('file-input');
+        const fileInputTrigger = document.getElementById('file-input-trigger');
+        const uploadButton = document.getElementById('upload-button');
+        const errorMessage = document.getElementById('error-message');
+        let selectedFile = null;
+
+        // Mostrar área activa al arrastrar un archivo
+        dragDropArea.addEventListener('dragover', (e) => {
+            e.preventDefault();
+            dragDropArea.classList.add('drag-over');
+        });
+
+        dragDropArea.addEventListener('dragleave', () => {
+            dragDropArea.classList.remove('drag-over');
+        });
+
+        // Manejar el evento drop
+        dragDropArea.addEventListener('drop', (e) => {
+            e.preventDefault();
+            dragDropArea.classList.remove('drag-over');
+            const file = e.dataTransfer.files[0];
+            validarArchivo(file);
+        });
+
+        // Activar el input de archivo al hacer clic
+        fileInputTrigger.addEventListener('click', () => {
+            fileInput.click();
+        });
+
+        // Validar y mostrar el archivo seleccionado
+        fileInput.addEventListener('change', () => {
+            const file = fileInput.files[0];
+            validarArchivo(file);
+        });
+
+        // Función para validar el archivo
+        function validarArchivo(file) {
+            if (file && file.type === 'text/csv') {
+                selectedFile = file;
+                errorMessage.style.display = 'none';
+                dragDropArea.querySelector('p').textContent = `Archivo seleccionado: ${file.name}`;
+                dragDropArea.classList.add('file-selected');
+            } else {
+                alert('Por favor selecciona un archivo CSV.');
+                selectedFile = null;
+            }
+        }
+
+        // Subir archivo
+        uploadButton.addEventListener('click', () => {
+            if (!selectedFile) {
+                errorMessage.style.display = 'block';
+                return;
+            }
+            errorMessage.style.display = 'none';
+            alert('Archivo listo para subir: ' + selectedFile.name);
         });
     </script>
 </body>
