--- a/index.html
+++ b/index.html
@@ -1,105 +1,132 @@
-const dragDropArea = document.getElementById('drag-drop-area');
-const fileInput = document.getElementById('file-input');
-const fileInputTrigger = document.getElementById('file-input-trigger');
-const uploadButton = document.getElementById('upload-button');
-const errorMessage = document.getElementById('error-message');
-let selectedFile = null;
+<!DOCTYPE HTML>
+<html lang="SP">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gestor de Grafos</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="grafo.png" type="image/x-icon">
+</head>
+<body>
+    <h1>Gestor de Grafos con Algoritmo de Kruskal</h1>
 
-// Mostrar área activa al arrastrar un archivo
-dragDropArea.addEventListener('dragover', (e) => {
-    e.preventDefault();
-    dragDropArea.classList.add('drag-over');
-});
+    <div id="drag-drop-area">
+        <p>Arrastra un archivo aquí o <span id="file-input-trigger" class="clickable">haz clic para seleccionarlo</span>.</p>
+        <input type="file" id="file-input" accept=".csv" hidden>
+    </div>
 
-dragDropArea.addEventListener('dragleave', () => {
-    dragDropArea.classList.remove('drag-over');
-});
+    <form id="upload-form">
+        <button type="button" id="upload-button">Subir Archivo</button>
+    </form>
 
-// Manejar el evento drop
-dragDropArea.addEventListener('drop', (e) => {
-    e.preventDefault();
-    dragDropArea.classList.remove('drag-over');
-    const file = e.dataTransfer.files[0];
-    validarArchivo(file);
-});
+    <div id="results" style="display: none;">
+        <h2>Resultados</h2>
+        <p id="peso_total"></p>
+        <div class="graficos-container">
+            <div class="grafico-box">
+                <h3>Grafo Completo</h3>
+                <div class="image-container">
+                    <img id="grafo_completo" src="" alt="Grafo Completo">
+                </div>
+            </div>
+            <div class="grafico-box">
+                <h3>Árbol MST</h3>
+                <div class="image-container">
+                    <img id="grafo_mst" src="" alt="Árbol MST">
+                </div>
+            </div>
+        </div>
+    </div>
 
-// Activar el input de archivo al hacer clic
-fileInputTrigger.addEventListener('click', () => {
-    fileInput.click();
-});
+    <div id="error-message" style="display:none; color: red;">
+        Por favor selecciona un archivo válido antes de subirlo.
+    </div>
 
-// Validar y mostrar el archivo seleccionado
-fileInput.addEventListener('change', () => {
-    const file = fileInput.files[0];
-    validarArchivo(file);
-});
+    <script>
+        const dragDropArea = document.getElementById('drag-drop-area');
+        const fileInput = document.getElementById('file-input');
+        const fileInputTrigger = document.getElementById('file-input-trigger');
+        const uploadButton = document.getElementById('upload-button');
+        const errorMessage = document.getElementById('error-message');
+        const results = document.getElementById('results');
+        const grafoCompletoImg = document.getElementById('grafo_completo');
+        const grafoMstImg = document.getElementById('grafo_mst');
+        let selectedFile = null;
 
-// Función para validar el archivo
-function validarArchivo(file) {
-    if (file && file.type === 'text/csv') {
-        selectedFile = file;
-        dragDropArea.querySelector('p').textContent = Archivo seleccionado: ${file.name};
-        dragDropArea.classList.add('file-selected');
-        errorMessage.style.display = 'none';
-    } else {
-        alert('Por favor selecciona un archivo CSV.');
-        selectedFile = null;
-    }
-}
-
-// Subir archivo
-uploadButton.addEventListener('click', async () => {
-    if (!selectedFile) {
-        errorMessage.style.display = 'block';
-        errorMessage.innerHTML = <p style="color: red;">Por favor selecciona un archivo antes de subirlo.</p>;
-        return;
-    }
-
-    try {
-        const formData = new FormData();
-        formData.append('file', selectedFile);
-
-        const response = await fetch('/upload', {
-            method: 'POST',
-            body: formData,
+        // Mostrar área activa al arrastrar un archivo
+        dragDropArea.addEventListener('dragover', (e) => {
+            e.preventDefault();
+            dragDropArea.classList.add('drag-over');
         });
 
-        if (!response.ok) {
-            throw new Error('Error al subir el archivo.');
+        dragDropArea.addEventListener('dragleave', () => {
+            dragDropArea.classList.remove('drag-over');
+        });
+
+        // Manejar el evento drop
+        dragDropArea.addEventListener('drop', (e) => {
+            e.preventDefault();
+            dragDropArea.classList.remove('drag-over');
+            const file = e.dataTransfer.files[0];
+            validarArchivo(file);
+        });
+
+        // Activar el input de archivo al hacer clic
+        fileInputTrigger.addEventListener('click', () => {
+            fileInput.click();
+        });
+
+        // Validar y mostrar el archivo seleccionado
+        fileInput.addEventListener('change', () => {
+            const file = fileInput.files[0];
+            validarArchivo(file);
+        });
+
+        // Función para validar el archivo
+        function validarArchivo(file) {
+            if (file && file.type === 'text/csv') {
+                selectedFile = file;
+                errorMessage.style.display = 'none';
+                dragDropArea.querySelector('p').textContent = Archivo seleccionado: ${file.name};
+                dragDropArea.classList.add('file-selected');
+            } else {
+                alert('Por favor selecciona un archivo CSV.');
+                selectedFile = null;
+            }
         }
 
-        const data = await response.json();
-        mostrarResultados(data);
-    } catch (error) {
-        errorMessage.style.display = 'block';
-        errorMessage.innerHTML = <p style="color: red;">Hubo un error al subir el archivo. Intenta nuevamente.</p>;
-    }
-});
+        // Subir archivo y mostrar resultados
+        uploadButton.addEventListener('click', async () => {
+            if (!selectedFile) {
+                errorMessage.style.display = 'block';
+                return;
+            }
+            errorMessage.style.display = 'none';
 
-// Mostrar resultados o errores
-function mostrarResultados(data) {
-    const results = document.getElementById('results');
+            const formData = new FormData();
+            formData.append('file', selectedFile);
 
-    errorMessage.style.display = 'none';
+            try {
+                const response = await fetch('/upload', {
+                    method: 'POST',
+                    body: formData,
+                });
 
-    if (data.error) {
-        results.style.display = 'none';
-        errorMessage.style.display = 'block';
-        errorMessage.innerHTML = <p style="color: red;">${data.error}</p>;
-    } else {
-        results.style.display = 'block';
-        document.getElementById('peso_total').textContent = Peso total del MST: ${data.peso_total} USD;
-        document.getElementById('grafo_completo').src = data.grafo;
-        document.getElementById('mst').src = data.mst;
-    }
-}
-
-// Agregar funcionalidad de zoom a las imágenes
-document.querySelectorAll('.zoom-button').forEach(button => {
-    button.addEventListener('click', () => {
-        const img = button.parentElement.querySelector('img');
-        const zoom = button.getAttribute('data-zoom');
-        const currentScale = parseFloat(img.style.transform.replace('scale(', '').replace(')', '') || 1);
-        img.style.transform = scale(${zoom === 'in' ? currentScale + 0.1 : Math.max(currentScale - 0.1, 1)});
-    });
-});
+                const data = await response.json();
+                if (data.error) {
+                    errorMessage.style.display = 'block';
+                    errorMessage.textContent = data.error;
+                } else {
+                    results.style.display = 'block';
+                    document.getElementById('peso_total').textContent = Peso total del MST: ${data.peso_total};
+                    grafoCompletoImg.src = data.grafo_completo || '/static/graphs/grafo_completo.png';
+                    grafoMstImg.src = data.grafo_mst || '/static/graphs/grafo_mst.png';
+                }
+            } catch (error) {
+                errorMessage.style.display = 'block';
+                errorMessage.textContent = 'Hubo un error al procesar el archivo. Intenta nuevamente.';
+            }
+        });
+    </script>
+</body>
+</html>
