--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestor de Grafos</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="grafo.png" type="image/x-icon">
+    <link rel="icon" href="/static/grafo.png" type="image/x-icon">
 </head>
 <body>
     <h1>Gestor de Grafos con Algoritmo de Kruskal</h1>
 
     <div id="drag-drop-area">
         <p>Arrastra un archivo aquí o <span id="file-input-trigger" class="clickable">haz clic para seleccionarlo</span>.</p>
-        <input type="file" id="file-input" accept=".csv" hidden>
+        <input type="file" id="file-input" accept=".csv, .xlsx" hidden>
     </div>
 
     <form id="upload-form">
@@ -26,13 +26,13 @@
             <div class="grafico-box">
                 <h3>Grafo Completo</h3>
                 <div class="image-container">
-                    <img id="grafo_completo" src="" alt="Grafo Completo">
+                    <img id="grafo_completo" src="static/graphs/grafo_completo.png" alt="Grafo Completo">
                 </div>
             </div>
             <div class="grafico-box">
                 <h3>Árbol MST</h3>
                 <div class="image-container">
-                    <img id="grafo_mst" src="" alt="Árbol MST">
+                    <img id="grafo_mst" src="static/graphs/grafo_mst.png" alt="Árbol MST">
                 </div>
             </div>
         </div>
@@ -42,91 +42,6 @@
         Por favor selecciona un archivo válido antes de subirlo.
     </div>
 
-    <script>
-        const dragDropArea = document.getElementById('drag-drop-area');
-        const fileInput = document.getElementById('file-input');
-        const fileInputTrigger = document.getElementById('file-input-trigger');
-        const uploadButton = document.getElementById('upload-button');
-        const errorMessage = document.getElementById('error-message');
-        const results = document.getElementById('results');
-        const grafoCompletoImg = document.getElementById('grafo_completo');
-        const grafoMstImg = document.getElementById('grafo_mst');
-        let selectedFile = null;
-
-        // Mostrar área activa al arrastrar un archivo
-        dragDropArea.addEventListener('dragover', (e) => {
-            e.preventDefault();
-            dragDropArea.classList.add('drag-over');
-        });
-
-        dragDropArea.addEventListener('dragleave', () => {
-            dragDropArea.classList.remove('drag-over');
-        });
-
-        // Manejar el evento drop
-        dragDropArea.addEventListener('drop', (e) => {
-            e.preventDefault();
-            dragDropArea.classList.remove('drag-over');
-            const file = e.dataTransfer.files[0];
-            validarArchivo(file);
-        });
-
-        // Activar el input de archivo al hacer clic
-        fileInputTrigger.addEventListener('click', () => {
-            fileInput.click();
-        });
-
-        // Validar y mostrar el archivo seleccionado
-        fileInput.addEventListener('change', () => {
-            const file = fileInput.files[0];
-            validarArchivo(file);
-        });
-
-        // Función para validar el archivo
-        function validarArchivo(file) {
-            if (file && file.type === 'text/csv') {
-                selectedFile = file;
-                errorMessage.style.display = 'none';
-                dragDropArea.querySelector('p').textContent = Archivo seleccionado: ${file.name};
-                dragDropArea.classList.add('file-selected');
-            } else {
-                alert('Por favor selecciona un archivo CSV.');
-                selectedFile = null;
-            }
-        }
-
-        // Subir archivo y mostrar resultados
-        uploadButton.addEventListener('click', async () => {
-            if (!selectedFile) {
-                errorMessage.style.display = 'block';
-                return;
-            }
-            errorMessage.style.display = 'none';
-
-            const formData = new FormData();
-            formData.append('file', selectedFile);
-
-            try {
-                const response = await fetch('/upload', {
-                    method: 'POST',
-                    body: formData,
-                });
-
-                const data = await response.json();
-                if (data.error) {
-                    errorMessage.style.display = 'block';
-                    errorMessage.textContent = data.error;
-                } else {
-                    results.style.display = 'block';
-                    document.getElementById('peso_total').textContent = Peso total del MST: ${data.peso_total};
-                    grafoCompletoImg.src = data.grafo_completo || '/static/graphs/grafo_completo.png';
-                    grafoMstImg.src = data.grafo_mst || '/static/graphs/grafo_mst.png';
-                }
-            } catch (error) {
-                errorMessage.style.display = 'block';
-                errorMessage.textContent = 'Hubo un error al procesar el archivo. Intenta nuevamente.';
-            }
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
